[tool.poetry]
name = "sec"
version = "0.3.0"
description = "Tiny Python library for secrets"
authors = ["Paris Kasidiaris <paris@sourcelair.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.1"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
